                       NEWS about GNU cgicc

======================================================================
        Please send bug reports, suggestions, and comments to
        <bug-cgicc@gnu.org>
======================================================================

        Major changes between versions 3.2.1 and 3.2.2
        ----------------------------------------------

* Memory leak during restoration of CGI environments fixed

* New getDoubleValue and getIntegerValue methods added to allow caller to 
  determine if value was bounded

* Bug in getDoubleValue fixed

* Bug in parsing of cookie names fixed

        Major changes between versions 3.2 and 3.2.1
        ----------------------------------------------

* Bug that caused multiple cookies to be output incorrectly fixed

* Better support added for Borland C++ Builder and HP aCC

* Bona fide support for FastCGI added

* Documentation fixes

        Major changes between versions 3.1.6 and 3.2
        ----------------------------------------------

* License changed to the Lesser GNU General Public License

* HTTP header classes rewritten and refactored

* HTML output now more XML-compliant

* Documentation rewritten in Doxygen format

* Added a demo on cookie usage


        Major changes between versions 3.1.5 and 3.1.6
        ----------------------------------------------

* Longstanding bug in multipart form handling that caused content type
  of uploaded file to be incorrectly reported fixed

* Support for external reader functions (for FastCGI support) added


        Major changes between versions 3.1.4 and 3.1.5
        ----------------------------------------------

* example/ directory completely reworked to be a real-world example
  that uses autoconf/automake/libtool

* New script 'cgicc-config' installed to help users of installed library

* New configure option --enable-debug-logging

* Documentation now released under the GNU Free Documentation License

