@@ -1,9 +1,8 @@
-## $Id: Makefile.am,v 1.3 2002/03/09 18:37:29 sbooth Exp $
+## $Id: Makefile.am,v 1.4 2004/06/12 15:26:56 sbooth Exp $
 
 CLEANFILES = *~
 
-EXTRA_DIST = config.guess config.sub depcomp install-sh ltmain.sh	\
-missing mkinstalldirs
+EXTRA_DIST = config.guess config.sub depcomp install-sh ltmain.sh missing
 
 bin_SCRIPTS = cgicc-config
 
